--- a/src/views/vehicleByMake.ejs
+++ b/src/views/vehicleByMake.ejs
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vehicle Inventory</title>
+    <title><%= make %> Vehicles</title>
     <link rel="stylesheet" href="/style.css">
 </head>
 <body>
     <%- include("navbar") %>
     
-    <h1>Vehicle Inventory</h1>
+    <h1><%= make %> Vehicles</h1>
     <%- include("vehicleList", {vehicles}) %>
 </body>
 </html>
